--- a/templates/login.html
+++ b/templates/login.html
@@ -46,6 +46,11 @@
               <a class="container center-align btn waves-effect #1565c0 blue darken-3" href="/facebook/login">Facebookでログインする</a>
             </div>
           </div>
+          <div class='container'>
+            <p class='sns login'>
+              <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+            </p>
+          </div>
         </div>
 
       </form>
