--- a/static/css/index.css
+++ b/static/css/index.css
@@ -282,7 +282,7 @@ div.main.loginform {
 
 .form.login_form_main.contents {
   width: 700px;
-  height: 630px;
+  height: 700px;
   right: 0;
   left: 0;
   margin: 10px auto;
@@ -291,7 +291,7 @@ div.main.loginform {
 
 #login_form_main {
   width: 650px;
-  height: 500px;
+  height: 580px;
   border: 3px solid black;
   border-radius: 20px;
   text-align: center;
@@ -321,11 +321,25 @@ div.main.loginform {
 
 .container-button {
   width: 236px;
-  margin: auto;
+  margin: 10px auto;
   border: 2px solid rgba(30, 50, 132);
   background-color: rgba(30, 50, 132, .9);
   height: 40px;
   border-radius: 5px;
+}
+
+.container-button:hover {
+  transform: scale(1.1);
+}
+
+.container-button.google {
+  width: 236px;
+  margin: auto;
+  border: 2px solid red;
+  background-color: rgba(219, 74, 57);
+  height: 40px;
+  border-radius: 5px;
+  text-align: left;
 }
 
 .container-button img {
@@ -335,12 +349,11 @@ div.main.loginform {
   z-index: 5;
 }
 
-.container-button img:hover {
-  width: 35px;
-  height: 35px;
-  position: absolute;
-  box-shadow: 0 0 8px rgba(30, 50, 132);
-  transform: scale(1.1);
+.container-button img.google {
+  position: relative;
+  width: 33px;
+  height: 33px;
+  margin: 1px;
 }
 
 .container.btn {
@@ -349,6 +362,14 @@ div.main.loginform {
   color: white;
   font-size: 16px;
   width: 232px;
+}
+
+.container-button.google a {
+  font-size: 20px;
+  color: white;
+  position: absolute;
+  margin: 3px;
+  margin-left: 5px;
 }
 
 li.forget {
