--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block main %}
-    <p class="display-4">Hello, {{ user.username }}</p>
+
+    <p class="display-4">Hello, World!!!</p>
     <a class="lead" href='/logout/'>Log out</a>
 
     <a class="lead" href='/login/'>Log in</a>
-
 
 {% endblock %}
