--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -35,7 +35,7 @@
   <title>roomii</title>
 
 </head>
-<body>
+<body id='main_contents'>
   <div class='header'>
     <div class='header img'>
       <a href="#"><img src="{% static 'img/wanko.png' %}" alt=""  /></a>
