--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 .contents {
-  width: 300px;
+  width: 340px;
   height: 100px;
   position: absolute;
   top: 10px;
@@ -28,12 +28,8 @@ body {
   height: 100px;
   float: left;
 }
-.img img:hover {
-  transform: scale(1.1);
-  box-shadow: 0 0 8px blue;
-}
 
-.login {
+li.user_name {
   list-style: none;
   font-size: 25px;
   color: black;
@@ -42,23 +38,46 @@ body {
   font-weight: 800;
 }
 
-.login:hover {
+li.user_name:hover {
+  transform: scale(1.1);
+  color: #2fa0ec;
+}
+
+li.user_name a {
+  color: black;
+  font-size: 20px;
+}
+
+li.user_name a:hover {
+  color: #2fa0ec;
+}
+
+li.login {
+  list-style: none;
+  font-size: 25px;
+  color: black;
+  float: right;
+  margin: 10px;
+  font-weight: 800;
+}
+
+li.login:hover {
   transform: scale(1.1);
 }
 
-.login a {
+li.login a {
   text-decoration: none;
   color: black;
   cursor: pointer;
 }
 
-.login a:hover {
-  color: blue;
+li.login a:hover {
+  color: #2fa0ec;
 }
 
 .sign {
   list-style: none;
-  float: left;
+  float: right;
   font-size: 25px;
   font-weight: 800;
   margin: 10px;
@@ -75,7 +94,7 @@ body {
 }
 
 .sign a:hover {
-  color: blue;
+  color: #2fa0ec;
 }
 
 .content {
@@ -238,6 +257,14 @@ ul.note li {
   display: block;
 }
 
+.error.edit {
+  text-align: center!important;
+}
+
+.error.edit .error_text {
+  color: red;
+}
+
 .dump_error_meaasage {
   color: red;
   font-size: 15px;
@@ -328,10 +355,6 @@ div.main.loginform {
   border-radius: 5px;
 }
 
-.container-button:hover {
-  transform: scale(1.1);
-}
-
 .container-button.google {
   width: 236px;
   margin: auto;
@@ -387,7 +410,7 @@ li.new_account {
 /*ユーザー情報編集*/
 
 #main_contents {
-  height: 120vh;
+  height: 120vh!important;
 }
 
 .main.mypage {
@@ -396,7 +419,7 @@ li.new_account {
 
 .main.mypage .contents {
   width: 500px;
-  height: 530px;
+  height: 600px;
   margin: 50px auto;
   background-color: rgba(255,255,255);
   border: 2px solid black;
@@ -430,7 +453,7 @@ li.new_account {
 
 .button {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .button #submit {
@@ -456,32 +479,46 @@ li.new_account {
 .input_file {
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 10px;
   width: 300px;
+  height: 155px;
+}
+
+.input_file_tittle {
+  margin: 0;
+  text-align: left;
+  color: #9e9e9e;
+  font-size: 1rem;
 }
 
 .file {
   margin-bottom: 15px;
 }
 
-.input_file .preview {
-  background-image: url("../img/profile.png");
-}
-
 .preview img {
   width: 80px;
+  margin: 10px auto;
 }
 
 .file input[type="file"] {
   font-size: 10px;
 }
 
+.point_title {
+  color: black;
+}
+
+.point_message {
+  color: red;
+}
+
 /*ユーザーページ*/
 
 .profilecard {
-  width: 45vw;
+  width: 50vw;
   margin: 3vw auto;
   padding: 1vw;
-  background-color: #EEEEEE;
+  background-color: rgba(255,255,255);
   border: solid 10px #f7b52c;
 }
 
@@ -496,12 +533,13 @@ li.new_account {
 
 .profile-header p {
   margin-left: 20px;
-  width: 100px;
+  padding-top: 18px;
 }
 
 .created_date {
   height: 25px;
   margin: 0!important;
+  padding: 0!important;
 }
 
 .created_date span {
@@ -514,10 +552,6 @@ li.new_account {
   margin-left: 5px;
 }
 
-.profile-header p a img:hover {
-  transform: scale(1.1);
-}
-
 .profile-footer {
   text-align: center;
 }
@@ -527,7 +561,7 @@ p span {
 }
 
 p span.user-name {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 a img .edit {
