--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,14 @@
     </div>
     <div class='contents'>
       <ul id='menu' class="menu">
+        {% if name is None %}
         <li class='login'><a href="/login">Login</a></li>
         <li class='sign'><a href="/register">Sign up</a></li>
+        {% else %}
+        <li class='user_name'><a href="/users/mypage">{{name}}</a></li>
+        <li class='login'><a href="/logout">Logout</a></li>
+        <li class='sign'><a href="/register">Sign up</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
