--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 
-<div class='main'>
+<div class='main login'>
   <div class='form login_form_main contents'>
     <main id="login_form">
       <div class='logo'>
@@ -11,7 +11,7 @@
       </div>
       <form action="/login/" method="post" id='login_form_main' data-validate >
         {% csrf_token %}
-        
+
         <div class='error'>
           <span class="error_meaasage login">{{error}}</span>
         </div>
