--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,147 @@ body {
   width: 100%;
 }
 
+/*header*/
+
+header {
+  z-index: 20;
+  position: absolute;
+}
+
+.form-inline {
+  max-width: 250px;
+  position: absolute;
+}
+.dropmenu{
+  *zoom: 1;
+  list-style-type: none;
+  width: 960px;
+  margin: 5px auto 30px;
+  padding: 0;
+}
+
+.dropmenu:before, .dropmenu:after{
+  content: "";
+  display: table;
+}
+.dropmenu:after{
+  clear: both;
+}
+
+.dropmenu li{
+  position: relative;
+  width: 20%;
+  float: left;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.dropmenu li.first{
+  margin-right: 15px;
+}
+
+.dropmenu li.last{
+  margin-right: 15px;
+}
+
+.dropmenu li a{
+  display: block;
+  margin: 0;
+  padding: 15px 0 11px;
+  background: #8a9b0f;
+  color: #fff;
+  font-size: 14px;
+  line-height: 1;
+  text-decoration: none;
+}
+
+.dropmenu li ul{
+  list-style: none;
+  z-index: 9999;
+  top: 100%;
+  left: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.dropmenu li ul li{
+  width: 100%;
+  display: none;
+}
+
+.dropmenu li ul li a{
+  padding: 13px 15px;
+  border-top: 1px solid #7c8c0e;
+  background: #6e7c0c;
+  text-align: left;
+}
+
+.dropmenu li:hover > a{
+  background: #6e7c0c;
+}
+
+.dropmenu li a:hover{
+  background: #616d0b;
+}
+
+#normal li ul {
+  display: none;
+}
+
+#normal li:hover ul {
+  display: block;
+}
+
+.name_box {
+  width: 240px;
+  float: left;
+  height: 40px;
+  margin-top: 2px;
+}
+
+.name_box input {
+  width: 170px;
+  height: 40px;
+}
+
+.address_box {
+  width: 300px;
+  float: right;
+}
+
+.address_box input {
+  height: 40px;
+}
+
+#form1{
+  float: right;
+  position:relative;/*フォームの相対位置*/
+  max-width:270px;/*フォームのサイズ*/
+  margin-bottom:15px;/*フォームの下に余白*/
+
+}
+/*検索ボックス*/
+#sbox{
+  height:40px;/*検索ボックスの高さ*/
+  padding:0 10px;/*テキスト位置調整*/
+  border-radius:2px 0 0 2px;/*検索ボックスの角を丸める*/
+  background:#eee;/*検索ボックスの背景カラー*/
+}
+/*検索ボタン*/
+#sbtn{
+  width: 70px;
+  height: 45px;
+  left:270px;/*検索ボタンの位置調整*/
+  top:0;
+  border-radius:0 2px 2px 0;/*検索ボタンの角を丸める*/
+  background:#7fbfff;/*検索ボタンの背景カラー*/
+  border:none;/*検索ボタンの枠線を消す*/
+  color:#fff;/*検索ボタンのテキストカラー*/
+  font-weight:bold;/*検索ボタンのテキスト太字*/
+  font-size:16px;/*検索ボタンのフォントサイズ*/
+}
+
 .bg-light {
   width: 100%;
   position: fixed;
@@ -17,12 +158,6 @@ body {
 .collapse.navbar-collapse {
   position: absolute;
   right: 0;
-}
-
-.header {
-  width: 100%;
-  height: 100px;
-  background: rgba(255, 255, 255);
 }
 
 .contents {
@@ -835,80 +970,143 @@ a:hover {
 }
 
 .content_main {
-  width: 930;
+  z-index: 5;
+  position: absolute;
+  max-width: 940px;
+  margin-top: 100px;
 }
 
 .main_container {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1.5fr .5fr .5fr 1.5fr;
-  grid-template-rows: 200px 50px 200px 200px 50px 200px auto;
+  grid-template-rows: 310px 50px 310px 310px 50px 310px auto;
 }
+
+.item img {
+  width: 100%;
+  height: 100%;
+}
+
+.img_item:hover {
+  filter: brightness(50%);
+  color: white;
+}
+
+.hide_text {
+  z-index: 10;
+  display: table-cell;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.text {
+  position: absolute;
+  z-index: 10;
+  width: 47%;
+  font-size: 25px;
+  font-weight: 600;
+  display: none;
+}
+
 .item {
   background: #ddd;
   padding: 10px;
   border-radius: 8px;
   border: 3px solid #ccc;
+  display: table;
+  width: 100%;
 }
+
 .box-big1 {
   grid-column: 1/3;
   grid-row: 1/3;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big2 {
   grid-column: 3/5;
   grid-row: 1/3;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big3 {
   grid-row: 3 / 4;
   background: #fc2;
   border-color: #fa0;
   grid-column: 2/4;
 }
+
 .box-big4 {
   grid-column: 1 / 2;
   background: #0ba;
   border-color: #098;
 }
+
 .box-big5 {
   grid-column: 4/5;
   grid-row: 3/3;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big6 {
   grid-column: 1/2;
   grid-row: 4/5;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big7 {
   grid-column: 4/5;
   grid-row: 4/5;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big8 {
   grid-column: 1/3;
   grid-row: 5/7;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big9 {
   grid-column: 3/5;
   grid-row: 5/7;
   background: #fc2;
   border-color: #fa0;
 }
+
 .box-big10 {
   grid-row: 4 / 5;
   background: #fc2;
   border-color: #fa0;
   grid-column: 2/4;
 }
+
+.heart {
+  width: 100px;
+  height: 100px;
+  background: url('http://nelog.jp/wp-content/uploads/2016/03/heart_animation.png') no-repeat;
+  background-position: 0 0;
+  cursor: pointer;
+}
+.heart:hover {
+  background-position: -2800px 0;
+  -webkit-transition: background 1s steps(28);
+  transition: background 1s steps(28);
+}
+
+.heart.commit {
+  background-position: -2800px 0;
+  -webkit-transition: background 1s steps(28);
+  transition: background 1s steps(28);
+}
+
+
 @media (max-width: 600px){
   .container {
     grid-template-columns: 1fr;
