--- a/templates/apps/base.html
+++ b/templates/apps/base.html
@@ -1,70 +1,95 @@
-<!doctype html>
-{% load static %}
+<!doctype html> {% load static %}
 <html lang="ja">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
-    <link rel="shortcut icon" href="{% static 'img/wanko.png' %}">
-    <title>roomii</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
+  <link rel="shortcut icon" href="{% static 'img/wanko.png' %}">
+  <title>roomii</title>
 </head>
+
 <body>
-    <!-- ナビバー -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">roomii</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-         {% if user.is_authenticated %}
-         <li>
-           <a class="nav-item nav-link" href="{% url 'apps:top'%}">TOP</a>
-         </li>
-         <li>
-           <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
-         </li>
-         <li>
-           <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
-         </li>
-         {% else %}
-         <li class="nav-item">
-           <a class="nav-item nav-link" href="/login/">
-           ようこそ、ゲスト！ログインはこちら
-         </a>
-         </li>
-         {% endif %}
-       </ul>
-      </div>
-    </nav>
+  <!-- ナビバー -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">roomii</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <!-- メインコンテント -->
-    <div class="container mt-3">
-        {% block content %}{% endblock %}
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        {% if user.is_authenticated %}
+        <li>
+          <a class="nav-item nav-link" href="{% url 'register:top'%}">TOP</a>
+        </li>
+        <li>
+          <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
+        </li>
+        <li>
+          <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-item nav-link" href="/login/">
+         ようこそ、ゲスト！ログインはこちら
+       </a>
+        </li>
+        {% endif %}
+      </ul>
     </div>
+  </nav>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-            integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-            integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-            crossorigin="anonymous"></script>
-    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'js/slick-1.8.1/slick/slick.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'js/slick-1.8.1/slick/slick-theme.css' %}" />
+  <!-- メインコンテント -->
+  <div class="container mt-3">
+    <header>
 
-    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+        <form method="get" action="" name='filter_name'>
+          {% csrf_token %}
+          <ul id='fade-in' class='dropmenu'>
+          <li class='first'>
+            <ul>
+              </li><a href="#">間取り</a> {%for tmp in room_list%}
+              <li><a href="#"><input type="checkbox" id="filter_kind_{{ tmp.id }}" name="room" value="{{ tmp.room_id }}">{{ tmp.room_id }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+          <li class='last'>
+            <ul>
+              <a href="#">階数</a> {%for list in floor_list%}
+              <li><a href="#"><input type="checkbox" id="filter_kind_{{ list.id }}" name="floor" value="{{ list.floor_id }}">{{ list.floor_id }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+          <div class='name_box'>
+            <input id="sbox" id="search" name="name" type="text" placeholder="名称" />
+          </div>
+          <div class='address_box'>
+            <input id="sbox" id="search" name="article_address" type="text" placeholder="住所" />
+            <input id="sbtn" type="submit" value="検索" />
+          </div>
+        </ul>
+        </form>
+
+    </header>
+    {% block content %}{% endblock %}
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'js/slick-1.8.1/slick/slick.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'js/slick-1.8.1/slick/slick-theme.css' %}" />
+
+  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
+
 </html>
