--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,10 @@ body {
   width: 100%;
 }
 
+li {
+  list-style: none;
+}
+
 /*header*/
 
 header {
@@ -149,6 +153,7 @@ header {
 .bg-light {
   width: 100%;
   position: fixed;
+  z-index: 30;
 }
 
 .container.mt-3 {
@@ -1016,6 +1021,7 @@ a:hover {
   border: 3px solid #ccc;
   display: table;
   width: 100%;
+  height: 450px;
 }
 
 .box-big1 {
@@ -1119,4 +1125,13 @@ a:hover {
     grid-column: 1;
     grid-row: auto;
   }
+}
+
+/*詳細情報*/
+.topic {
+  width: 930px;
+}
+
+.image_field {
+  margin-bottom: 30px;
 }
