--- a/templates/register/base.html
+++ b/templates/register/base.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
           integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
     <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
     <link rel="shortcut icon" href="{% static 'img/wanko.png' %}">
     <title>roomii</title>
@@ -61,9 +62,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
             integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
             crossorigin="anonymous"></script>
+    <script src="{% static 'js/slick-1.8.1 2/' %}" /></script>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'js/slick-1.8.1/slick/slick.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'js/slick-1.8.1/slick/slick-theme.css' %}" />
+
 
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
