--- a/templates/apps/info.html
+++ b/templates/apps/info.html
@@ -13,38 +13,47 @@
     </div>
       <table class="table">
         <tbody>
-            <tr>
-                <th>名称</th>
-                <td>{{view_list.article_name}}</td>
-            </tr>
-            <tr>
-                <th>住所</th>
-                <td>{{view_list.address}}</td>
-            </tr>
-            <tr>
-                <th>家賃</th>
-                <td>{{view_list.rent}}</td>
-            </tr>
-            <tr>
-                <th>駐車場</th>
-                <td>{{view_list.park}}</td>
-            </tr>
-            <tr>
-                <th>初期費用</th>
-                <td>{{view_list.initial_cost}}</td>
-            </tr>
-            <tr>
-                <th>間取り</th>
-                <td>{{view_list.floor_plan}}</td>
-            </tr>
-            <tr>
-                <th>共益費用</th>
-                <td>{{view_list.term_of_contract}}</td>
-            </tr>
-            <tr>
-                <th>その他</th>
-                <td>{{view_list.others.comment}}</td>
-            </tr>
+          <tr>
+              <th>空室状況</th>
+              {% if view_list.live_flag.vacancy_info == '0' %}
+                 <td>空室あり</td>
+              {% else %}
+                 <td>空室なし({{view_list.live_flag.vacancy_live}})</td>
+              {% endif %}
+
+          </tr>
+          <tr>
+              <th>名称</th>
+              <td>{{view_list.article_name}}</td>
+          </tr>
+          <tr>
+              <th>住所</th>
+              <td>{{view_list.address}}</td>
+          </tr>
+          <tr>
+              <th>家賃</th>
+              <td>{{view_list.rent}}</td>
+          </tr>
+          <tr>
+              <th>駐車場</th>
+              <td>{{view_list.park}}</td>
+          </tr>
+          <tr>
+              <th>初期費用</th>
+              <td>{{view_list.initial_cost}}</td>
+          </tr>
+          <tr>
+              <th>間取り</th>
+              <td>{{view_list.floor_plan}}</td>
+          </tr>
+          <tr>
+              <th>共益費用</th>
+              <td>{{view_list.term_of_contract}}</td>
+          </tr>
+          <tr>
+              <th>その他</th>
+              <td>{{view_list.others.comment}}</td>
+          </tr>
         </tbody>
     </table>
   </div>
