--- a/templates/apps/info.html
+++ b/templates/apps/info.html
@@ -8,7 +8,7 @@
   <div class='topic'>
     <div class='image_field'>
       <div class='image_contents'>
-        <li><img src="{{view_list.room_images.image}}" alt=""></li>
+        <li><img src="/media/{{view_list.article_image}}" alt=""></li>
       </div>
     </div>
       <table class="table">
@@ -52,7 +52,7 @@
           </tr>
           <tr>
               <th>その他</th>
-              <td>{{view_list.others.comment}}</td>
+              <td>{{view_list.column}}</td>
           </tr>
         </tbody>
     </table>
