--- a/templates/register/user_detail.html
+++ b/templates/register/user_detail.html
@@ -37,7 +37,7 @@
           <div class="stream">
             <div class="content">
               <div class='preview'>
-                <img src="{{tmp.image}}" alt="">
+                <img src="/media/{{tmp.image}}" alt="">
               </div>
               <div class="stream-header">
                 <p>
