--- a/static/css/index.css
+++ b/static/css/index.css
@@ -38,7 +38,7 @@ header {
 
 .dropmenu li{
   position: relative;
-  width: 20%;
+  width: 15%;
   float: left;
   margin: 0;
   padding: 0;
@@ -103,7 +103,6 @@ header {
 }
 
 .name_box {
-  width: 240px;
   float: left;
   height: 40px;
   margin-top: 2px;
@@ -1078,8 +1077,20 @@ a:hover {
 
 }
 
-.heart {
+.empty_flag {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 700;
+  width: 180px;
   position: absolute;
+  height: 100px;
+  vertical-align: middle;
+  padding: 25px 0;
+}
+
+.heart {
+  position: relative;
+  float: right;
   z-index: 20;
   width: 100px;
   height: 100px;
@@ -1095,7 +1106,8 @@ a:hover {
 }
 
 .heart.commit {
-  position: absolute;
+  position: relative;
+  float: right;
   z-index: 20;
   background-position: -2800px 0;
   -webkit-transition: background 1s steps(28);
@@ -1124,4 +1136,102 @@ a:hover {
 
 .image_field {
   margin-bottom: 30px;
+}
+
+/*物件登録*/
+.article {
+  position: absolute;
+  width: 700px;
+  right: 0;
+  margin: auto;
+  margin-top: 100px;
+  border: 2px solid black;
+  border-radius: 10px;
+  left: 0;
+}
+
+.vacant {
+  margin: 20px;
+  display: none;
+}
+
+.calendar {
+  display: none;
+}
+
+.start_date {
+  margin: 20px;
+}
+
+.cancel_date {
+  margin: 20px;
+}
+
+.update_at {
+  margin: 20px;
+}
+
+.vacant_live {
+  margin: 20px;
+  display: none;
+}
+
+.vacant input {
+  width: 300px;
+  padding: 10px 10px;
+}
+
+/*業者用ページ*/
+
+.create {
+  position: absolute;
+}
+
+.create button {
+  border-style: none;
+  background-color: rgba(67, 135, 233);
+  border: 2px solid blue;
+  border-radius: 10px;
+  width: 110px;
+  height: 40px;
+  margin: 30px auto;
+}
+
+.create button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 8px rgba(67, 135, 233);
+}
+
+.create button a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.update button {
+  border-style: none;
+  background-color: rgba(67, 135, 233);
+  border: 2px solid blue;
+  border-radius: 10px;
+  width: 110px;
+  height: 40px;
+  margin: 30px 0 0 160px;
+}
+
+.update button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 8px rgba(67, 135, 233);
+}
+
+.update button a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.form-group .media_img {
+  width: 100px;
+  margin: 10px;
 }
